--- a/bsbl.html
+++ b/bsbl.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <h1>Sports</h1>
-    <h2> My favorite sports</h2>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        </li><a href="bsbl.html">Baseball</a></li>
-
-
+    <h2> Baseball field</h2>
   </body>
+  <img src="bsbl.jpeg" alt="A wideview of a stadium."
 </html>
