--- a/bsktbl.html
+++ b/bsktbl.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <h1>Sports</h1>
-    <h2> My favorite sports</h2>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        </li><a href="bsbl.html">Baseball</a></li>
-
-
+    <h2> Basketball</h2>
   </body>
+  <img src="basktball" alt="sideview of basketball hoop"
 </html>
