--- a/ftbl.html
+++ b/ftbl.html
@@ -8,12 +8,6 @@
   </head>
   <body>
     <h1>Sports</h1>
-    <h2> My favorite sports</h2>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        </li><a href="bsbl.html">Baseball</a></li>
-
-
+    <h2> Football</h2>
   </body>
 </html>
